# kytrade

./: .gitignore  PKG-INFO  README.md  dev-requirements.py  pylintrc  pyproject.toml  setup.py  todo.md
data/: README.md
data/index-funds/: README.md  nasdaq100.json
kytrade/: __version__.py  alphavantage.py  calc.py  const.py  exceptions.py  old_portsim.py  portfolio.py  portfolio_simulator.py  stock_market.py
kytrade/api/: README.md  alpaca.py  ibkr.py  iex.py  insync.py  questrade.py  stockshark.py  tws.py  yahoo.py
kytrade/api/client/: alphavantage.py  insync.py  tws.py  yahoo.py
kytrade/api/server/: app.py
kytrade/cli/: ]  backtest.py  calc.py  common.py  download.py  init.py  main.py  portfolio_simulator.py  pprint.py  stock_market.py  stockmarket.py
kytrade/cli/ps/: portfolio_simulator.py  strat.py  tx.py
kytrade/cli/strat/: action.py  condition.py  strat.py
kytrade/data/: README.md  daily_stock_price.py  db.py  models.py  rem-daily_stock_price.py  sma.py
kytrade/ps/: enums.py  metadata.py  portfolio.py  simulator.py  tx.py
kytrade/strategy/: action.py  buy_and_hold.py  condition.py  ideas.md  strategy.py
scenarios/: MSFT70-CASH30-MonthRbal.sh
tests/: conftest.py  test_alphavantage.py  test_calc.py  test_cli_common.py  test_const.py  test_daily_stock_prices.py  test_portfolio.py  test_portfolio_simulator.py  test_sma.py  test_stock_market.py  test_strategy.py  test_version.py
tests/integration/: test_api.py
tests/unit/: conftest.py  test_cli_common.py  test_const.py  test_portfolio_simulator.py  test_stockmarket.py
